# devflow-pro

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: publish-blog.yml  release-please.yml  rust.yml  test.yml
benches/: analysis_benchmark.rs
blog/: README.md  devto-announcement.md
blog/images/: banner.html  banner_devto.html
config/: config.template.toml  config.toml  default.json  default.toml
docs/: ai-configuration.md  index.md
docs/guide/: getting-started.md
examples/: analyze_diff.rs  self_analysis.rs  test.rs  test_analysis.rs  test_windsurf.rs  windsurf_ide.rs
src/: lib.rs  main.rs
src/ai/: api_check.rs  llama.rs  mod.rs  tests.rs  types.rs
src/ai/tests/: llama_test.rs
src/ai_enhanced/: mod.rs
src/analysis/: mod.rs  pipeline.rs  semantic.rs
src/windsurf/: config.rs  ide.rs  ide_main.rs  interface.rs  mock.rs  mod.rs  mod.rs.bak  mod.rs.tmp  ui.rs
test_code/: complex.rs  sample.rs
tests/: ai_enhanced_test.rs  ai_optimization_test.rs  ai_test.rs  semantic_test.rs  test_code.rs  windsurf_integration_test.rs  windsurf_plugin_test.rs
