[package]
name = "devflow-pro"
version = "1.0.3"
edition = "2021"
authors = ["DevFlow Team"]
description = "A comprehensive static code analysis tool for software projects"
repository = "https://github.com/devflow/devflow-pro"
license = "MIT"
keywords = ["static-analysis", "code-quality", "metrics", "security"]
categories = ["development-tools", "command-line-utilities"]
default-run = "devflow-pro"

[lib]
name = "devflow_pro"
path = "src/lib.rs"

[[bin]]
name = "devflow-pro"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async and parallel processing
rayon = "1.8"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
num_cpus = "1.16"

# AI and Machine Learning
reqwest = { version = "0.11", features = ["json"] }
tokenizers = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
tracing-subscriber = "0.3"

# Logging and diagnostics
log = "0.4"
env_logger = "0.10"
tracing = "0.1"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# File system operations
ignore = "0.4"
walkdir = "2.4"
globset = "0.4"

# Performance optimization
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Security
ring = "0.17"
rustls = "0.21"

# Semantic analysis
tree-sitter = "0.20"
tree-sitter-rust = "0.20"

# Code parsing
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
tokio-test = "0.4"
test-log = "0.2"
pretty_assertions = "1.4"
test-case = "3.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["full"]
full = ["security-checks", "complexity-analysis", "dependency-tracking"]
security-checks = []
complexity-analysis = []
dependency-tracking = []

[package.metadata]
msrv = "1.70.0"
